--- a/bombeiroSa/ficha.html
+++ b/bombeiroSa/ficha.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-    <title>Dados da Ocorrência</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    <title>Ficha da Ocorrência</title>
 </head>
 
 <style>
@@ -384,7 +382,7 @@
                 <div class="form-group">
 
                     <fieldset>
-                        <legend id="Anamnese">Anamnese da Emergência Médica</legend>
+                        <legend>Anamnese da Emergência Médica</legend>
                         <div>
                             <div class="destaque2">
                                 <div>O que aconteceu (sinais e sintomas)</div>
@@ -3338,35 +3336,7 @@
         </div>
     </div>
     </form>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
-    <!-- <script>
-            var buttons = document.querySelectorAll(".b1");
-    var anamneseFieldset = document.querySelector(".b
-
-    var buttons = document.querySelectorAll(".b1");
-    var anamneseFieldset = document.querySelector(".b2");
-
-    for (const button of buttons) {
-        button.addEventListener("change
-
-    var buttons = document.querySelectorAll(".b1");
-    var anamneseFieldset = document.querySelector(".b2");
-
-    for (const button of buttons) {
-        button.addEventListener("change", () => {
-            anamneseFieldset.style.display = "block
-
-    var buttons = document.querySelectorAll(".b1");
-    var anamneseFieldset = document.querySelector(".b2");
-
-    for (const button of buttons) {
-        button.addEventListener("change", () => {
-            anamneseFieldset.style.display = "block";
-        });
-    }
-    </script> -->
 </body>
 
 </html>
