--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <style>
         body {
             margin-top: -90px;
@@ -115,42 +116,40 @@
         }
 
         /* Importar tiny.css para larguras de tela até 299px */
-@media (max-width: 299px) {
-    @import url(tiny.css);
-}
+        @media (max-width: 299px) {
+            @import url(tiny.css);
+        }
 
-/* Importar small.css para larguras de tela entre 300px e 699px */
-@media (min-width: 300px) and (max-width: 699px) {
-    @import url(small.css);
-}
+        /* Importar small.css para larguras de tela entre 300px e 699px */
+        @media (min-width: 300px) and (max-width: 699px) {
+            @import url(small.css);
+        }
 
-/* Importar big.css para larguras de tela maiores que 699px */
-@media (min-width: 700px) {
-    @import url(big.css);
-}
+        /* Importar big.css para larguras de tela maiores que 699px */
+        @media (min-width: 700px) {
+            @import url(big.css);
+        }
 
-/* Estilos para telas pequenas (exemplo: smartphones) */
-@media (max-width: 768px) {
-    /* Estilos específicos para telas pequenas aqui */
-}
+        /* Estilos para telas pequenas (exemplo: smartphones) */
+        @media (max-width: 768px) {
+            /* Estilos específicos para telas pequenas aqui */
+        }
 
-/* Estilos para telas médias (exemplo: tablets) */
-@media (min-width: 769px) and (max-width: 1024px) {
-    /* Estilos específicos para telas médias aqui */
-}
+        /* Estilos para telas médias (exemplo: tablets) */
+        @media (min-width: 769px) and (max-width: 1024px) {
+            /* Estilos específicos para telas médias aqui */
+        }
 
-/* Estilos para telas grandes (exemplo: desktops) */
-@media (min-width: 1025px) {
-    /* Estilos específicos para telas grandes aqui */
-}
-
-        
+        /* Estilos para telas grandes (exemplo: desktops) */
+        @media (min-width: 1025px) {
+            /* Estilos específicos para telas grandes aqui */
+        }
     </style>
 </head>
 
 <body>
     <div class="logo">
-        <img src="logos.png" width="60%"/>
+        <img src="logos.png" width="60%" />
     </div>
     <div class="container">
         <div class="heading">Login</div>
@@ -161,7 +160,9 @@
             <button class="login-button" type="submit" value="Entrar"><a href="perfil.html">Entrar</a></button>
         </form>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
