--- a/ficha.html
+++ b/ficha.html
@@ -10,11 +10,12 @@
 <style>
     body {
         margin: 0;
-        padding: 0;
-        font-size: 16px;
-        font-family: Arial, sans-serif;
-        background-color: rgba(160, 161, 161, 0.055);
-        align-items: center;
+    padding: 0;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    background-color: rgba(160, 161, 161, 0.055);
+    align-items: center;
+    min-height: 100%;
     }
 
     .header {
@@ -87,9 +88,10 @@
     .container {
         max-width: 800px;
         max-height: 90%;
-        background: rgba(160, 161, 161, 0.055);
+        background-color: rgba(160, 161, 161, 0.055);
         margin: 0px auto 40px auto;
         border-radius: 5px;
+        height: 100%; /* Adicione esta linha */
     }
 
     .form {
@@ -294,7 +296,7 @@
 
     .qa {
         line-height: 30px;
-        background: #FDFDFD;
+        background-color: rgba(160, 161, 161, 0.055);
     }
 
     .qh {
@@ -393,7 +395,6 @@
         <div class="imgg">
             <img src="logos.png" width="35%">
         </div>
-
     </div>
 
     <div class="qa">
