--- a/index.html
+++ b/index.html
@@ -6,36 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+        crossorigin="anonymous">
 
     <style>
         body {
-            margin-top: -90px;
-            margin-bottom: 90px;
+            background-image: linear-gradient(0deg, hsl(0deg 84% 36%) 3%, hsl(42deg 78% 57%) 12%, hsl(46deg 86% 77%) 16%, rgba(160, 161, 161, 0.144) 24%);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: linear-gradient(0deg, hsl(0deg 84% 36%) 3%, hsl(42deg 78% 57%) 12%, hsl(46deg 86% 77%) 16%, rgba(160, 161, 161, 0.144) 24%);
-        }
-
-        .logo {
-            text-align: center;
-            margin-bottom: 20px;
-            opacity: 0.7;
+            margin-top: -90px;
+            margin-bottom: 90px;
         }
 
         .container {
-            max-width: 350px;
+            max-width: 300px;
             background: #F8F9FD;
-            background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(244, 247, 251) 100%);
-            border-radius: 40px;
-            padding: 25px 35px;
-            border: 5px solid rgb(255, 255, 255);
-            box-shadow: rgba(218, 76, 44, 0.37) 0px 30px 30px -20px;
-            margin: 20px;
-            margin-bottom: 100px;
+            border-radius: 20px;
+            padding: 20px;
+            box-shadow: rgba(218, 76, 44, 0.37) 0px 10px 10px -5px;
+            text-align: center;
+        }
+
+        .logo img {
+            max-width: 60%;
+            height: auto;
+            margin-bottom: 20px; /* Espaço entre a logo e o bloco de login */
         }
 
         .heading {
@@ -45,19 +43,14 @@
             color: rgba(218, 75, 44, 1);
         }
 
-        .form {
-            margin-top: 10px;
-        }
-
         .form .input {
-            width: 90%;
+            width: 100%;
             background: white;
             border: none;
             padding: 15px 20px;
             border-radius: 20px;
             margin-top: 15px;
             box-shadow: rgba(218, 76, 44, 0.37) 0px 10px 10px -5px;
-            border-inline: 2px solid transparent;
         }
 
         .form .input::-moz-placeholder {
@@ -70,12 +63,10 @@
 
         .form .input:focus {
             outline: none;
-            border-inline: 2px solid #12B1D1;
+            border: 2px solid #12B1D1;
         }
 
         .form .forgot-password {
-            display: block;
-            margin-top: 15px;
             text-align: center;
             font-size: 20px;
         }
@@ -92,8 +83,7 @@
             font-weight: bold;
             background: linear-gradient(28deg, rgba(255, 239, 51, 0.8463760504201681) 0%, rgba(218, 75, 44, 1) 47%, rgba(94, 0, 0, 1) 100%);
             color: white;
-            padding-block: 15px;
-            margin: 20px auto;
+            padding: 15px;
             border-radius: 20px;
             box-shadow: rgba(218, 76, 44, 0.582) 0px 10px 10px -5px;
             border: none;
@@ -114,49 +104,19 @@
             color: white;
             text-decoration: none;
         }
-
-        /* Importar tiny.css para larguras de tela até 299px */
-        @media (max-width: 299px) {
-            @import url(tiny.css);
-        }
-
-        /* Importar small.css para larguras de tela entre 300px e 699px */
-        @media (min-width: 300px) and (max-width: 699px) {
-            @import url(small.css);
-        }
-
-        /* Importar big.css para larguras de tela maiores que 699px */
-        @media (min-width: 700px) {
-            @import url(big.css);
-        }
-
-        /* Estilos para telas pequenas (exemplo: smartphones) */
-        @media (max-width: 768px) {
-            /* Estilos específicos para telas pequenas aqui */
-        }
-
-        /* Estilos para telas médias (exemplo: tablets) */
-        @media (min-width: 769px) and (max-width: 1024px) {
-            /* Estilos específicos para telas médias aqui */
-        }
-
-        /* Estilos para telas grandes (exemplo: desktops) */
-        @media (min-width: 1025px) {
-            /* Estilos específicos para telas grandes aqui */
-        }
     </style>
 </head>
 
 <body>
-    <div class="logo">
-        <img src="logos.png" width="60%" />
+    <div class="logo text-center">
+        <img src="logos.png" alt="Logo" />
     </div>
     <div class="container">
         <div class="heading">Login</div>
         <form action="" class="form">
             <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required="" class="input" type="password" name="password" id="password" placeholder="Senha">
-            <span class="forgot-password"><a href="#">Forgot Password ?</a></span>
+            <span class="forgot-password"><a href="#">Esqueceu a senha?</a></span>
             <button class="login-button" type="submit" value="Entrar"><a href="perfil.html">Entrar</a></button>
         </form>
     </div>
