--- a/bombeiroSa - versao antiga/perfil.html
+++ b/bombeiroSa - versao antiga/perfil.html
@@ -1,240 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firefighters App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: #FDFDFD;
+        }
 
+        .header {
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+            background: linear-gradient(28deg, rgba(255, 239, 51, 0.8463760504201681) 0%, rgba(218, 75, 44, 1) 47%, rgba(94, 0, 0, 1) 100%);
+        }
+
+        .button-group {
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+            justify-content: center;
+            align-items: center; /* Centralize verticalmente os botões */
+        }
+
+        .button {
+            background-color: #e74c3c;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+            max-width: 200px; /* Defina uma largura máxima para os botões */
+        }
+
+        .logged-in-user {
+            color: #fff;
+            font-size: 20px;
+            margin-bottom: 20px;
+        }
+
+        .search-container {
+            display: none;
+            justify-content: center;
+            align-items: center;
+            height: 50px;
+            margin-top: 20px;
+        }
+
+        .search-input {
+            max-width: 100%;
+            height: 90%;
+            outline: none;
+            font-size: 14px;
+            font-weight: 500;
+            background-color: #e74d3cec;
+            caret-color: #f7f7f8;
+            color: #fff;
+            padding: 7px 10px;
+            border: 2px solid transparent;
+            border-top-left-radius: 7px;
+            border-bottom-left-radius: 7px;
+            margin-right: 1px;
+            transition: all .2s ease;
+        }
+
+        .search-input:hover {
+            border: 2px solid rgba(255, 255, 255, 0.16);
+        }
+
+        .search-input:focus {
+            border: 2px solid #a970ff;
+            background-color: #e74c3c;
+        }
+
+        .search-button {
+            border: none;
+            cursor: pointer;
+            background-color: #e74c3c;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            border-top-right-radius: 7px;
+            border-bottom-right-radius: 7px;
+            height: 86%;
+            width: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .search-button:hover {
+            background-color: white;
+        }
+
+        .ui {
+            opacity: 0.1;
+            justify-content: center;
+            display: flex;
+            align-items: center;
+        }
+
+        /* Estilos para telas pequenas (exemplo: smartphones) */
+        @media (max-width: 768px) {
+            .header {
+                padding: 20px;
+            }
+
+            .logged-in-user {
+                font-size: 16px;
+            }
+
+            .gif {
+                height: 30px;
+            }
+
+            .button-group {
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+            }
+
+            .search-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+            }
+
+            .search-input {
+                width: 100%;
+                max-width: none;
+                border-radius: 5px;
+                margin: 0;
+            }
+
+            .search-button {
+                width: 100%;
+                border-radius: 5px;
+            }
+
+            .search-button:hover {
+                background-color: #e74c3c;
+            }
+        }
+
+        /* Estilos para telas médias e maiores (exemplo: tablets, desktops) */
+        @media (min-width: 769px) {
+            .button-group {
+                flex-direction: row;
+                justify-content: center;
+                gap: 20px;
+            }
+
+            .search-container {
+                flex-direction: row;
+                margin-left: 20px; /* Adicione um espaçamento à esquerda para a barra de pesquisa */
+            }
+
+            .search-input {
+                width: 190px;
+                max-width: 190px;
+            }
+
+            .search-button {
+                width: auto;
+            }
+        }
+    </style>
 </head>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        background: #FDFDFD;
-    }
-
-    .header {
-        color: #fff;
-        padding: 40px;
-        text-align: center;
-        background: linear-gradient(28deg, rgba(255, 239, 51, 0.8463760504201681) 0%, rgba(218, 75, 44, 1) 47%, rgba(94, 0, 0, 1) 100%);
-    }
-
-    .button-group {
-        display: flex;
-        gap: 20px;
-        margin-top: 30px;
-        justify-content: center;
-    }
-
-    .button {
-        background-color: #e74c3c;
-        color: #fff;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        font-size: 16px;
-        cursor: pointer;
-    }
-
-    .button:hover {
-        background-color: #c0392b;
-    }
-
-    .logged-in-user {
-        color: #fff;
-        font-size: 20px;
-        margin-bottom: 20px;
-    }
-
-    .ddp {
-        padding: 35px 35px;
-        ;
-    }
-
-    .cabecalho {
-        display: inline;
-    }
-
-    .causas {
-        font-family: 'Fira Sans', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 25px;
-        column-count: 3;
-    }
-
-    .container {
-        max-width: 700px;
-        max-height: 100%;
-        background: #ffffffd9;
-        margin: 0px auto 40px auto;
-        border-radius: 5px;
-    }
-
-    .form {
-        padding: 30px;
-    }
-
-    .form label,
-    .form p {
-        font-size: 1rem;
-        line-height: 2rem;
-        font-weight: bold;
-    }
-
-    .form-group input,
-    .form select {
-        width: 100%;
-        border-radius: 5px;
-        padding: 8px;
-        border: 1px solid #ced4da;
-        margin-bottom: 18px;
-    }
-
-    .form select {
-        cursor: pointer;
-    }
-
-    .form-radio-checkbox {
-        margin-bottom: 15px;
-    }
-
-    form .form-radio-checkbox {
-        display: grid;
-    }
-
-    .form-radio-checkbox input {
-        margin-right: 10px;
-    }
-
-    .form-radio-checkbox label {
-        line-height: 2rem;
-        display: flex;
-        align-items: center;
-    }
-
-    .form-radio-checkbox label:first-child {
-        margin-bottom: 10px;
-    }
-
-    .input-radio {
-        width: 1.25rem;
-        height: 1.25rem;
-        display: inline-block;
-        cursor: pointer;
-    }
-
-    .input-checkbox {
-        display: inline-block;
-        min-width: 1.25rem;
-        min-height: 1.25rem;
-        cursor: pointer;
-    }
-
-    .form-textarea {
-        display: grid;
-    }
-
-    .form-textarea textarea {
-        padding: 10px;
-    }
-
-    .radio-group {
-        display: flex;
-        align-items: center;
-    }
-
-    .radio-group input[type="radio"] {
-        margin-right: 5px;
-    }
-
-    a {
-        color: white;
-        text-decoration: none;
-    }
-
-    .gif {
-        width: auto;
-        height: 40px;
-        animation: slowGif 5s linear infinite;
-    }
-
-    @keyframes slowGif {
-        0% {
-            opacity: 1;
-        }
-
-        100% {
-            opacity: 1;
-        }
-    }
-
-
-    .search-container {
-        display: none;
-        justify-content: center;
-        align-items: center;
-        height: 50px;
-        margin-top: 20px;
-        /* Adicionei um espaço entre os botões e a barra de pesquisa */
-    }
-
-    .search-input {
-        max-width: 190px;
-        height: 90%;
-        outline: none;
-        font-size: 14px;
-        font-weight: 500;
-        background-color: #e74d3cec;
-        caret-color: #f7f7f8;
-        color: #fff;
-        padding: 7px 10px;
-        border: 2px solid transparent;
-        border-top-left-radius: 7px;
-        border-bottom-left-radius: 7px;
-        margin-right: 1px;
-        transition: all .2s ease;
-    }
-
-    .search-input:hover {
-        border: 2px solid rgba(255, 255, 255, 0.16);
-    }
-
-    .search-input:focus {
-        border: 2px solid #a970ff;
-        background-color: #e74c3c;
-    }
-
-    .search-button {
-        border: none;
-        cursor: pointer;
-        background-color: #e74c3c;
-        border-top-right-radius: 7px;
-        border-bottom-right-radius: 7px;
-        height: 86%;
-        width: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .search-button:hover {
-        background-color: white;
-    }
-
-    .ui {
-        opacity: 0.1;
-        justify-content: center;
-        display: flex;
-        align-items: center;
-    }
-</style>
-
 <body>
     <div class="header">
         <div class="logged-in-user">
@@ -299,5 +238,4 @@
         }
     </script>
 </body>
-
 </html>
