--- a/perfil.html
+++ b/perfil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,6 +26,7 @@
             gap: 20px;
             margin-top: 20px;
             justify-content: center;
+            align-items: center; /* Centralize verticalmente os botões */
         }
 
         .button {
@@ -36,8 +37,7 @@
             border-radius: 4px;
             font-size: 16px;
             cursor: pointer;
-            flex: 1;
-            max-width: 200px;
+            max-width: 200px; /* Defina uma largura máxima para os botões */
         }
 
         .logged-in-user {
@@ -107,51 +107,48 @@
         }
 
         /* Estilos para telas pequenas (exemplo: smartphones) */
-@media (max-width: 768px) {
-    .header {
-        padding: 20px;
-    }
+        @media (max-width: 768px) {
+            .header {
+                padding: 20px;
+            }
 
-    .logged-in-user {
-        font-size: 16px;
-    }
+            .logged-in-user {
+                font-size: 16px;
+            }
 
-    .gif {
-        height: 30px;
-    }
+            .gif {
+                height: 30px;
+            }
 
-    .button-group {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; /* Adicione a linha aqui */
-        gap: 10px;
-    }
+            .button-group {
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+            }
 
-    .search-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; /* Adicione a linha aqui */
-        gap: 10px;
-    }
+            .search-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+            }
 
-    .search-input {
-        width: 100%;
-        max-width: none;
-        border-radius: 5px;
-        margin: 0;
-    }
+            .search-input {
+                width: 100%;
+                max-width: none;
+                border-radius: 5px;
+                margin: 0;
+            }
 
-    .search-button {
-        width: 100%;
-        border-radius: 5px;
-    }
+            .search-button {
+                width: 100%;
+                border-radius: 5px;
+            }
 
-    .search-button:hover {
-        background-color: #e74c3c;
-    }
-}
-
+            .search-button:hover {
+                background-color: #e74c3c;
+            }
+        }
 
         /* Estilos para telas médias e maiores (exemplo: tablets, desktops) */
         @media (min-width: 769px) {
@@ -163,6 +160,7 @@
 
             .search-container {
                 flex-direction: row;
+                margin-left: 20px; /* Adicione um espaçamento à esquerda para a barra de pesquisa */
             }
 
             .search-input {
