--- a/bombeiroSa - versao antiga/index.html
+++ b/bombeiroSa - versao antiga/index.html
@@ -17,7 +17,8 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
 
         .container {
@@ -107,10 +108,10 @@
 </head>
 
 <body>
+    <div class="logo text-center">
+        <img src="logos.png" alt="Logo" />
+    </div>
     <div class="container">
-        <div class="logo text-center">
-            <img src="logos.png" alt="Logo" />
-        </div>
         <div class="heading">Login</div>
         <form action="" class="form">
             <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
