--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
 
         .container {
