--- a/bombeiroSa - versao antiga/index.html
+++ b/bombeiroSa - versao antiga/index.html
@@ -117,7 +117,7 @@
             <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required="" class="input" type="password" name="password" id="password" placeholder="Senha">
             <span class="forgot-password"><a href="#">Esqueceu a senha?</a></span>
-            <button class="login-button" type="submit" value="Entrar"><a href="perfil.html">Entrar</a></button>
+            <button class="login-button" type="button" onclick="window.location.href='perfil.html'">Entrar</button>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
