--- a/bombeiroSa - versao antiga/perfil.html
+++ b/bombeiroSa - versao antiga/perfil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,10 +23,10 @@
 
         .button-group {
             display: flex;
+            flex-direction: column;
             gap: 20px;
             margin-top: 20px;
-            justify-content: center;
-            align-items: center; /* Centralize verticalmente os botões */
+            align-items: center;
         }
 
         .button {
@@ -37,7 +37,8 @@
             border-radius: 4px;
             font-size: 16px;
             cursor: pointer;
-            max-width: 200px; /* Defina uma largura máxima para os botões */
+            width: 100%;
+            max-width: 200px;
         }
 
         .logged-in-user {
@@ -106,7 +107,6 @@
             align-items: center;
         }
 
-        /* Estilos para telas pequenas (exemplo: smartphones) */
         @media (max-width: 768px) {
             .header {
                 padding: 20px;
@@ -127,10 +127,7 @@
             }
 
             .search-container {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 10px;
+                display: none; /* Oculta a barra de pesquisa em telas menores */
             }
 
             .search-input {
@@ -150,7 +147,6 @@
             }
         }
 
-        /* Estilos para telas médias e maiores (exemplo: tablets, desktops) */
         @media (min-width: 769px) {
             .button-group {
                 flex-direction: row;
@@ -160,7 +156,7 @@
 
             .search-container {
                 flex-direction: row;
-                margin-left: 20px; /* Adicione um espaçamento à esquerda para a barra de pesquisa */
+                margin-left: 20px;
             }
 
             .search-input {
@@ -187,7 +183,6 @@
         </a>
     </div>
 
-    <!-- Botão de Pesquisar com barra de pesquisa abaixo dos botões -->
     <div class="button-group">
         <div class="tab">
             <a href="ficha.html"><button class="button" onclick="openCity(event, 'Nova')">Nova Ficha</button></a>
@@ -196,7 +191,6 @@
         </div>
     </div>
 
-    <!-- Tab content -->
     <div id="Nova" class="tabcontent">
         <!-- Conteúdo da guia Nova Ficha aqui -->
     </div>
