--- a/bombeiroSa - versao antiga/perfil.html
+++ b/bombeiroSa - versao antiga/perfil.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,10 +24,8 @@
         .button-group {
             display: flex;
             gap: 20px;
-            margin-top: 20px;
             justify-content: center;
             align-items: center;
-            flex-direction: column; /* Altere a direção para coluna em telas menores */
         }
 
         .button {
@@ -130,7 +127,7 @@
             }
 
             .search-container {
-                display: flex;
+                display: none;
                 flex-direction: column;
                 align-items: center;
                 gap: 10px;
@@ -246,5 +243,4 @@
         }
     </script>
 </body>
-
 </html>
