--- a/bombeiroSa - versao antiga/index.html
+++ b/bombeiroSa - versao antiga/index.html
@@ -25,9 +25,12 @@
             max-width: 350px;
             background: #F8F9FD;
             border-radius: 20px;
-            padding: 20px;
             box-shadow: rgba(218, 76, 44, 0.37) 0px 10px 10px -5px;
             text-align: center;
+            background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(244, 247, 251) 100%);
+            border-radius: 40px;
+            padding: 25px 35px;
+            border: 5px solid rgb(255, 255, 255);
         }
 
         .logo img {
