--- a/bombeiroSa - versao antiga/perfil.html
+++ b/bombeiroSa - versao antiga/perfil.html
@@ -24,6 +24,9 @@
 
         .button-group {
             display: flex;
+            gap: 20px;
+            margin-top: 30px;
+            justify-content: center;
             flex-direction: column; /* Altere a direção para coluna */
             align-items: center; /* Centralize horizontalmente */
         }
