--- a/bombeiroSa - versao antiga/perfil.html
+++ b/bombeiroSa - versao antiga/perfil.html
@@ -126,7 +126,11 @@
             .button-group {
                 flex-direction: column;
                 align-items: center;
-                gap: 10px;
+                display: flex;
+                gap: 20px;
+                margin-top: 30px;
+                justify-content: center;
+    }
             }
 
             .search-container {
