--- a/bombeiroSa - versao antiga/perfil.html
+++ b/bombeiroSa - versao antiga/perfil.html
@@ -44,6 +44,10 @@
             width: 100%; /* Defina a largura como 100% */
         }
 
+        .tap{
+            display: griid;
+        }
+
         .logged-in-user {
             color: #fff;
             font-size: 20px;
