--- a/bombeiroSa - versao atual/ficha.html
+++ b/bombeiroSa - versao atual/ficha.html
@@ -2012,7 +2012,7 @@
 
                     <fieldset>
                         <legend>Procedimentos Efetuados</legend>
-                        <div class="dsn">
+                        <div class="duo">
                             <div class="destaque2"><input type="checkbox" class="glas" id="p-efetuados"
                                     name="p-efetuados" value="p-efetuados">
                                 <label for="p-efetuados">Aspiração</label>
