--- a/bombeiroSa - versao atual/ficha.html
+++ b/bombeiroSa - versao atual/ficha.html
@@ -731,7 +731,7 @@
                         <div class="destaque2">
                             <div class="duo">
                                 <div>Nome do bebe:</div>
-                                <input class="qt" type="text" id="nome-acompanhante" name="nome-acompanhante"
+                                <input class="oa" type="text" id="nome-acompanhante" name="nome-acompanhante"
                                     placeholder="Digite" required />
                             </div>
                         </div>
