--- a/bombeiroSa - versao atual/index.html
+++ b/bombeiroSa - versao atual/index.html
@@ -117,10 +117,10 @@
             <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required="" class="input" type="password" name="password" id="password" placeholder="Senha">
             <span class="forgot-password"><a href="#">Esqueceu a senha?</a></span>
-            <button class="login-button" type="submit">Entrar</button>
+            <button class="login-button" type="submit"><a href="perfil.html">Entrar</a></button>
         </form>
 
-        <?php
+<!--         <?php
             if ($_SERVER["REQUEST_METHOD"] == "POST") {
                 $email = $_POST["email"];
                 $senha = $_POST["password"];
@@ -138,7 +138,7 @@
                     echo "Credenciais inválidas.";
                 }
             }
-        ?>
+        ?> -->
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
