--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -44,7 +44,7 @@
         }
 
         .tap{
-            display: griid;
+            display: grid;
             justify-content: center;
         }
 
