--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -46,6 +46,9 @@
         .tap{
             display: grid;
             justify-content: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .logged-in-user {
