--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -168,8 +168,12 @@
             }
 
             .tab{
-                margin-rigth: 20px;
-                margin-left: 20px:
+                margin-rigth: 40px;
+                margin-left: 40px:
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
             }
 
         /* Estilos para telas médias e maiores (exemplo: tablets, desktops) */
