--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -114,6 +114,14 @@
             background-color: white;
         }
 
+        .tab{
+            margin-rigth: 40px;
+            margin-left: 40px:
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
         .ui {
             opacity: 0.1;
             justify-content: center;
@@ -173,7 +181,6 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-
             }
 
         /* Estilos para telas médias e maiores (exemplo: tablets, desktops) */
