--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -56,7 +56,10 @@
             font-size: 16px;
             cursor: pointer;
             /* Remova max-width: 200px; */
-            margin: 5px 0;
+            margin: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             /* Adicione width: auto; */
             width: auto;
         }
