--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -225,7 +225,7 @@
 
     <!-- Remova a classe .button-group e flex-direction: column; do contêiner de botões -->
     <div class="tab">
-        <div id="tab">
+        <div class="button">
             <a href="ficha.html"><button class="button" onclick="openCity(event, 'Nova')">Nova Ficha</button></a>
             <button class="button" onclick="openCity(event, 'Historico')">Histórico de Ficha</button>
             <button class="button" onclick="toggleSearch()">Pesquisar</button>
@@ -241,7 +241,7 @@
     </div>
 
     <div id="Pesquisar" class="tabcontent">
-        <div class="search-container" id="searchContainer">
+        <div class="search-container" id="search-container">
             <input type="text" class="search-input" placeholder="Pesquisar">
             <button class="search-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
