--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -288,20 +288,20 @@
     <div class="radio-input">
   <label>
   <input type="radio" id="value-1" name="value-radio" value="value-1">
-  <span>Option 1</span>
+  <span>Nova Ficha</span>
   </label>
   <label>
     <input type="radio" id="value-2" name="value-radio" value="value-2">
-  <span>Option 2</span>
+  <span>Histórico</span>
   </label>
   <label>
     <input type="radio" id="value-3" name="value-radio" value="value-3">
-  <span>Option 3</span>
+  <span>Pesquisar</span>
   </label>
   <span class="selection"></span>
 </div>
     
-    <!-- Remova a classe .button-group e flex-direction: column; do contêiner de botões -->
+<!--     <!-- Remova a classe .button-group e flex-direction: column; do contêiner de botões -->
     <div class="tab">
         <div class="button">
             <a href="ficha.html"><button class="button" onclick="openCity(event, 'Nova')">Nova Ficha</button></a>
@@ -330,7 +330,7 @@
             </button>
         </div>
     </div>
-
+ -->
     <div class="ui">
         <img src="logos.png" width="70%" />
     </div>
