--- a/bombeiroSa - versao atual/ficha.html
+++ b/bombeiroSa - versao atual/ficha.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-    <title>Ficha da Ocorrência</title>
-    <link rel="icon" type="image/x-icon" href="/bombeiroSa - versão atual/logotipos.png">
+    <title>Ficha</title>
+    <link rel="icon" type="image/x-icon" href="/bombeiroSa - versao atual/logos.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
 
