--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firefighters App</title>
+  <title>Perfil</title>
+  <link rel="icon" type="image/x-icon" href="/bombeiroSa - versao atual/logos.png">
 
   <style>
     body {
